@@ -1,3 +1,8 @@
+2007-12-31  Marcos David Marín Amador <MarcosMarin@gmail.com> 
+
+	* Project/CProject.cs: Copy deployment files to output directory when
+	  building the project.
+
 2007-12-28  Marcos David Marín Amador <MarcosMarin@gmail.com> 
 
 	* Gui/GeneralOptionsPanel.cs, CBinding.addin.xml,
